<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background">

    <TextView
        android:id="@+id/tv_title_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:paddingVertical="13dp"
        android:text="@string/bottom_sheet_title_main"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title_sheet"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="14dp"
                android:text="@string/text_user_info"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_person_24"
                app:drawableTint="@color/main" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/ll_change_password_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="14dp"
                android:text="@string/text_change_pass"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_key_24"
                app:drawableTint="@color/main" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="14dp"
                android:text="@string/text_setting_app"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_settings_24"
                app:drawableTint="@color/main" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="16dp"
            tools:ignore="DuplicateSpeakableTextCheck">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:fontFamily="@font/inter_medium"
                android:paddingVertical="14dp"
                android:text="@string/text_help"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_help_24"
                app:drawableTint="@color/main" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/inter_medium"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/text_button_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck,TextContrastCheck" />

    </LinearLayout>

</RelativeLayout>