<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="48dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_name_edit_stadium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="46dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_stadium_name"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:minHeight="50dp"
            android:paddingHorizontal="12dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edt_size_edit_stadium"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_stadium_size"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name_edit_stadium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edt_capacity_edit_stadium"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_stadium_capacity"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_size_edit_stadium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edt_repair_edit_stadium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_stadium_repair"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:minHeight="50dp"
            android:paddingHorizontal="12dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_capacity_edit_stadium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edt_address_edit_stadium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:gravity="start"
            android:hint="@string/hint_stadium_address"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:minHeight="50dp"
            android:minLines="5"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_repair_edit_stadium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update_info_edit_stadium"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/button_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/text_button_update"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_address_edit_stadium"
            tools:ignore="UnknownId,VisualLintButtonSize,TextContrastCheck,DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>