<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddStadiumActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="48dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_list_image_add_stadium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_image_add_stadium"
                    android:layout_width="match_parent"
                    android:layout_height="165dp" />

                <me.relex.circleindicator.CircleIndicator3
                    android:id="@+id/indicator_add_stadium"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/rl_select_image_add_stadium"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_margin="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_image_upload"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_upload_image_add_stadium"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_cloud_upload_24"
                app:tint="@color/main"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_below="@id/iv_upload_image_add_stadium"
                android:layout_centerHorizontal="true"
                android:text="@string/text_upload_image" />

        </RelativeLayout>

        <EditText
            android:id="@+id/edt_name_add_stadium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_stadium_name"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:minHeight="50dp"
            android:paddingHorizontal="12dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_list_image_add_stadium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edt_size_add_stadium"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_stadium_size"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name_add_stadium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edt_capacity_add_stadium"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_stadium_capacity"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_size_add_stadium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edt_repair_add_stadium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_stadium_repair"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:minHeight="50dp"
            android:paddingHorizontal="12dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_capacity_add_stadium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edt_address_add_stadium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/inter_medium"
            android:gravity="start"
            android:hint="@string/hint_stadium_address"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:minHeight="50dp"
            android:minLines="5"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:textColor="#0b1f33"
            android:textColorHint="#9fa7b1"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_repair_add_stadium"
            tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_stadium"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/button_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/text_button_add"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_address_add_stadium"
            tools:ignore="UnknownId,VisualLintButtonSize,TextContrastCheck,DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>